add update status
